--- a/demo/src/main/resources/static/css/app.css
+++ b/demo/src/main/resources/static/css/app.css
@@ -10,6 +10,7 @@
         text-align: center;
         display: block;
         padding-top: .75rem;
+        padding-bottom: .75rem;
         margin-top: auto;
         margin-bottom: auto;
       }
