--- a/demo/src/main/resources/templates/layout.html
+++ b/demo/src/main/resources/templates/layout.html
@@ -99,7 +99,7 @@ a {
 <body th:fragment="body">
 	<div id="wrap">
 	
-		<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+		<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light border-bottom">
 		  <div class="container-fluid">
 		    <a class="navbar-brand" href="#">Mirror</a>
 		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -108,11 +108,11 @@ a {
 		    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 		        <li class="nav-item">
-		          <a class="nav-link active" aria-current="page" href="viewClothes?type=NotSpecified">Clothes</a>
+		          <a class="nav-link" href="viewClothes?type=NotSpecified">Clothes</a>
 		        </li>
-<!-- 		        <li class="nav-item">
+ 		        <li class="nav-item">
 		          <a class="nav-link" href="outfits?occasion=NotSpecified">Outfits</a>
-		        </li> -->
+		        </li>
 		      </ul>
 		    </div>
 		  </div>
